# PedalDSP

./: .gitignore  CLAUDE.md  generate_capture_signal.py  generate_signal.py  pedal-capture-plan.md  pedal-classical-models.md  pedal-neural-models.md  pyproject.toml  requirements.txt  requirements_capture.txt
capture_signals/: capture_fuzz_20260605_091728_meta.json
configs/: experiment.yaml
data/signals/: notaklon_val_take1.json  train_signal_v1.json  val_signal_v1.json
docs/: notaklon_emulation_plan_v3.md  pedal-classical-models.md  pedal-metrics.md  pedal-neural-models.md  pedal-project-map.md  signal_design.md
notebooks/: capture_signal_designer.py  learning_tier1_linear_effects.ipynb  learning_tier1_linear_effects.py  learning_tier2_lstm_lr_channels.py  learning_tier2_lstm_training.py  pi_muff_end_to_end.py
pedal_model/capture/: align.py  generate_sweep.py  verify.py
pedal_model/data/: augment.py  dataset.py  resample.py
pedal_model/eval/: compare.py  diagnostics.py  report.py  run_eval.py
pedal_model/metrics/: frequency_domain.py  harmonic.py  perceptual.py  suite.py  time_domain.py
pedal_model/models/: base.py
pedal_model/signals/: __init__.py  generate.py  manifest.py
pedal_model/train/: losses.py  scheduler.py  trainer.py
pedal_model/utils/: __init__.py  analysis.py  plotting.py  synthesis.py
tests/: conftest.py
tests/capture/: test_align.py  test_generate_sweep.py
tests/data/: test_dataset.py  test_dataset_manifest.py  test_resample.py
tests/metrics/: test_frequency_domain.py  test_harmonic.py  test_perceptual.py  test_suite.py  (+1 more)
(+33 files in other folders)
