[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pedal-model"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pedal_model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
